# Data-Integration-aws-databricks

./: .gitignore  databricks.yml  pyproject.toml  requirements.txt
config/: config_project_root.py
docs/: poetry_export_requirements.md
notebooks/: Untitled Notebook 2025-08-20 21:31:21.ipynb  dicovery_connect_S3.ipynb  discovery-databricks.databricks.notebook.workflow-wrapper.ipynb  discovery-databricks.ipynb  discovery_parquet_to_s3.ipynb
src/data_integration/aws/: s3.py
