[project]
name = "data-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Rodrigues",email = "lucas.srodrigues1805@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "data_integration", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
