[project]
name = "data-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Rodrigues",email = "lucas.srodrigues1805@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "databricks-cli (>=0.18.0,<0.19.0)",
    "databricks-sdk (>=0.63.0,<0.64.0)",
    "databricks-connect (==15.1.*)",
    "boto3 (>=1.40.14,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]

[tool.poetry]
packages = [{include = "data_integration", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
